--- a/projects/F1.md
+++ b/projects/F1.md
@@ -1,1 +1,34 @@
+Columbia FSAE - HV Enclosure
+---
 
+# Columbia FSAE: HV Enclosure
+Design and manufacture of a **High-Voltage Enclosure** for Columbia University's **Formula SAE Electric** race car.
+
+## Objectives
+- Develop a **high-voltage battery enclosure** to house the power supply.
+- Ensure **structural integrity and cooling efficiency** for competition use.
+- Optimize material selection and design through **Finite Element Analysis (FEA).**
+
+## Contributions
+### **Battery & Accumulator**
+- Designed battery storage enclosure in **SolidWorks**.
+- Performed **maintenance and material selection** for battery dividers.
+
+### **Enclosure Design**
+- Selected **Aluminum 5052-H32** for enclosure material.
+- Modeled **lids, walls, and casing** in **SolidWorks**.
+- Conducted **FEA analysis** to evaluate durability and safety.
+
+### **Chassis Integration**
+- Designed **mounting tabs** to connect chassis with the accumulator.
+- Assisted in chassis component design for compatibility.
+
+## Tools & Technologies
+- **CAD:** SolidWorks  
+- **Material Analysis:** FEA  
+- **Prototyping:** CNC Machining, 3D Printing  
+
+## Role
+**HV Enclosure Lead** – Responsible for the full design cycle from **concept to implementation**.
+
+[Return to Home](https://Handsome-Zheng.github.io/)
