--- a/projects/F1.md
+++ b/projects/F1.md
@@ -14,6 +14,8 @@ Design and manufacture of a **High-Voltage Enclosure** for Columbia University's
 - Designed battery storage enclosure in **SolidWorks**.
 - Performed **maintenance and material selection** for battery dividers.
 
+  ![Aluminum Accumulator 2025](/assets/images/PortfolioF1.2.PNG)
+
 ### **Enclosure Design**
 - Selected **Aluminum 5052-H32** for enclosure material.
 - Modeled **lids, walls, and casing** in **SolidWorks**.
